samples/_failures_safe/1761285134_d62dd2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9bd10e44.c: In function ‘main’:
./samples/SAFE/__tmp_9bd10e44.c:136:5: error: expected declaration or statement at end of input
  136 |     }
      |     ^
